Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132107 3D surface graph bugs
  3. QTBUG-132352

Using LogValue3DAxisFormatter for Y axis crashes the application.

    XMLWordPrintable

Details

    • 14918a2a0 (dev), 2de565546 (6.9), 481f6427b (6.8)

    Description

      import QtQuick
      import QtGraphs
      
      Window {
        id: root
        width: 1280
        height: 960
        visible: true
        title: qsTr("Graphs 3D - Surface Graph")
      
        Surface3D {
          id: surfaceGraph
          anchors.fill: parent
      
          axisY: Value3DAxis {
            formatter: LogValue3DAxisFormatter {}
          }
      
          Surface3DSeries {
            id: surfaceSeries
      
            ItemModelSurfaceDataProxy {
              itemModel: dataModel
              rowRole: "xPos"
              columnRole: "zPos"
              yPosRole: "yPos"
            }
          }
        }
      
        ListModel {
          id: dataModel
          Component.onCompleted: {
            for (let i = 0; i <= 10; ++i) {
              for (let j = 20; j <= 30; ++j) {
                dataModel.append({"xPos": i, "yPos": i * j, "zPos": j})
              }
            }
          }
        }
      } 

      Attachments

        For Gerrit Dashboard: QTBUG-132352
        # Subject Branch Project Status CR V

        Activity

          People

            oulu_hillbilly Sami Varanka
            oulu_hillbilly Sami Varanka
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes