Fix: logvalueaxis crash in surface3D

Prevent setting surface min bounds to NaN or inf.

Fixes: QTBUG-132352
Change-Id: Iea07a1d4026d6afd62ec101f41677c2f5116b900
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
(cherry picked from commit 14918a2a0b571c28522c5cf3e31a2e614b6ff317)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 2de5655463d5bf2f2a503f411c976ea423c58080)